--- a/RedArrow.glyphsReporter/Contents/Info.plist
+++ b/RedArrow.glyphsReporter/Contents/Info.plist
@@ -27,7 +27,7 @@
 	<key>productPageURL</key>
 	<string>https://github.com/jenskutilek/RedArrow-Glyphs</string>
 	<key>productReleaseNotes</key>
-	<string>Implemented Glyphs Update mechanism.</string>
+	<string>Bug fixes.</string>
 	<key>LSHasLocalizedDisplayName</key>
 	<false/>
 	<key>NSAppleScriptEnabled</key>
