--- a/RedArrow.glyphsReporter/Contents/Info.plist
+++ b/RedArrow.glyphsReporter/Contents/Info.plist
@@ -21,13 +21,13 @@
 	<key>CFBundleVersion</key>
 	<string>45</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.4.5</string>
+	<string>0.4.6</string>
 	<key>UpdateFeedURL</key>
 	<string>https://raw.githubusercontent.com/jenskutilek/RedArrow-Glyphs/glyphs2/RedArrow.glyphsReporter/Contents/Info.plist</string>
 	<key>productPageURL</key>
 	<string>https://github.com/jenskutilek/RedArrow-Glyphs</string>
 	<key>productReleaseNotes</key>
-	<string>Bugfix</string>
+	<string>Save hide/show labels state.</string>
 	<key>LSHasLocalizedDisplayName</key>
 	<false/>
 	<key>NSAppleScriptEnabled</key>
